# monty

./: .codecov.yml  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  how-it-works.md  plan.md  pyproject.toml
.claude/: settings.json
.github/actions/build-pgo-wheel/: action.yml
.github/workflows/: ci.yml
benches/: main.rs
crates/monty/: Cargo.toml
crates/monty-cli/src/: main.rs
crates/monty-js/: README.md  package-lock.json  package.json
crates/monty-python/: .mypy-stubtest-allowlist  Cargo.toml  README.md  example.py  exercise.py  pyproject.toml
crates/monty-python/python/pydantic_monty/: __init__.py  _monty.pyi
crates/monty-python/src/: convert.rs  dataclass.rs  exceptions.rs  external.rs  lib.rs  limits.rs  monty_cls.rs
crates/monty-python/tests/: test_basic.py  test_dataclasses.py  test_exceptions.py  test_external.py  test_inputs.py  test_limits.py  test_print.py  test_serialize.py  test_start.py  test_threading.py  test_type_check.py  test_types.py
crates/monty-typeshed/: build.rs  update.py
crates/monty/benches/: main.rs
crates/monty/src/: args.rs  asyncio.rs  builtins.rs  callable.rs  error.rs  evaluate.rs  exception.rs  exception_private.rs  exception_public.rs  executor.rs  expressions.rs  for_iterator.rs  fstring.rs  function.rs  heap.rs  intern.rs  lib.rs  namespace.rs  object.rs  parse.rs  prepare.rs  resource.rs  run.rs  run_frame.rs  signature.rs  snapshot.rs  value.rs
crates/monty/src/builtins/: abs.rs  all.rs  any.rs  bin.rs  chr.rs  divmod.rs  enumerate.rs  filter.rs  hasattr.rs  hash.rs  hex.rs  id.rs  isinstance.rs  len.rs  min_max.rs  mod.rs  next.rs  oct.rs  ord.rs  pow.rs  print.rs  repr.rs  reversed.rs  round.rs  sorted.rs  sum.rs  type_.rs  zip.rs
crates/monty/src/bytecode/: builder.rs  code.rs  compiler.rs  op.rs
crates/monty/src/bytecode/vm/: async_exec.rs  attr.rs  binary.rs  call.rs  collections.rs  compare.rs  exceptions.rs  format.rs  mod.rs  scheduler.rs
crates/monty/src/modules/: asyncio.rs  mod.rs  pathlib.rs  sys.rs  typing.rs
crates/monty/src/types/: bytes.rs  dataclass.rs  dict.rs  iter.rs  list.rs  long_int.rs  mod.rs  module.rs  namedtuple.rs  path.rs  py_trait.rs  range.rs  set.rs  slice.rs  str.rs  tuple.rs  type.rs
crates/monty/test_cases/: builtin__filter.py  builtin__filter_lambda.py  builtin__filter_not_callable.py  builtin__filter_not_iterable.py  builtin__filter_user_defined_func.py  builtin__hasattr.py  builtin__math_funcs.py  builtin__more_iter_funcs.py  dict__method_items.py  dict__method_keys.py  dict__method_values.py  id__empty_list_id.py  id__list_literals_distinct.py  id__non_overlapping_lifetimes_distinct_types.py  id__non_overlapping_lifetimes_same_types.py  id__ops.py  id__tuple_literals_distinct.py  import__os.py  import__sys_monty.py  import__typing.py  list__ops.py  parse_error__complex.py  pathlib__pure.py  sys__types.py  traceback__nonlocal_module_scope.py  type__ops.py  typing__types.py  version__cpython.py
crates/monty/tests/: asyncio.rs  datatest_runner.rs  inputs.rs  json_serde.rs  main.rs  parse_errors.rs  print_writer.rs  resource_limits.rs  snapshot.rs  try_from.rs
scripts/: run_traceback.py
src/: bin.rs  builtins.rs  evaluate.rs  exceptions.rs  executor.rs  exit.rs  expressions.rs  function.rs  heap.rs  intern.rs  lib.rs  literal.rs  main.rs  object.rs  object_types.rs  parse.rs  position.rs  prepare.rs  resource.rs  run.rs  run_frame.rs  types.rs
src/values/: dict.rs  list.rs
test_cases/: args__list_insert_too_few.py  args__list_insert_too_many.py  for_loop.py
tests/: iter.rs  main.rs  parse_errors.rs  resource_limits.rs
(+5 files in other folders)
