[package]
name = "monty"
version = "0.1.0"
edition = "2021"

[lib]
name = "monty"
path = "src/lib.rs"

[[bin]]
name = "monty"
path = "src/bin.rs"
unittests = false

[dependencies]
rustpython-parser = { git = "https://github.com/charliermarsh/RustPython.git", rev = "c3147d2c1524ebd0e90cf1c2938d770314fd5a5a" }
ahash = "0.8.0"
num = "0.4.0"
mimalloc = "0.1.30"

[dev-dependencies]
paste = "1.0.7"
pyo3 = { version = "0.19.0", features = ["auto-initialize"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
#debug = true
