[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
# PyPI package name (hyphenated), the module is named `pydantic_monty` (underscored)
name = "pydantic-monty"
version = "0.1.0"
description = "Python bindings for the Monty sandboxed Python interpreter"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "inline-snapshot>=0.31.1",
    "pytest>=9.0.2",
    "pytest-examples>=0.0.14",
    "pytest-pretty>=1.3.0",
]
