[package]
name = "monty"
version = "0.1.0"
edition = "2021"

[lib]
name = "monty"
path = "src/lib.rs"

[dependencies]
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_python_parser", branch = "main" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_python_ast", branch = "main" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_text_size", branch = "main" }
ahash = "0.8.0"
indexmap = { version = "2.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
hashbrown = "0.16.1"

[features]
ref-counting = []
dec-ref-check = []

[dev-dependencies]
pyo3 = { version = "0.19.0", features = ["auto-initialize"] }
criterion = "0.5"
datatest-stable = "0.2"
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }
serde_json = "1.0"

[[bench]]
name = "main"
harness = false

[[test]]
name = "datatest_runner"
harness = false

[lints]
workspace = true
